--- a/src/bow/bow.html
+++ b/src/bow/bow.html
@@ -3,32 +3,34 @@
     <h2>${heading}</h2>
     <form class="form-horizontal" role="form" submit.delegate="save()">
       <div class="form-group">
-        <label for="fn">Name</label>
-        <input type="text" value.bind="bow.name" class="form-control" id="fn" placeholder="" required>
+        <label for="name">Name</label>
+        <input type="text" value.bind="bow.name" class="form-control" id="name" placeholder="" required>
       </div>
       <div class="form-group">
-        <label for="fn">Type</label>
-        <input type="text" value.bind="bow.type" class="form-control" id="fn" placeholder="" required>
+        <label for="type">Type</label>
+        <select id="type" value.bind="bow.type" class="form-control">
+          <option repeat.for="btype of bowTypes" value.bind="btype">${btype}</option>
+        </select>
       </div>
       <div class="form-group">
-        <label for="fn">Make</label>
-        <input type="text" value.bind="bow.make" class="form-control" id="fn" placeholder="" required>
+        <label for="make">Make</label>
+        <input type="text" value.bind="bow.make" class="form-control" id="make" placeholder="" required>
       </div>
       <div class="form-group">
-        <label for="fn">Model</label>
-        <input type="text" value.bind="bow.model" class="form-control" id="fn" placeholder="" required>
+        <label for="model">Model</label>
+        <input type="text" value.bind="bow.model" class="form-control" id="model" placeholder="" required>
       </div>
       <div class="form-group">
-        <label for="fn">Poundage</label>
-        <input type="text" value.bind="bow.poundage" class="form-control" id="fn" placeholder="" required>
+        <label for="poundage">Poundage</label>
+        <input type="number" value.bind="bow.poundage" class="form-control" id="poundage" placeholder="" required>
       </div>
       <div class="form-group">
-        <label for="fn">AMO Length</label>
-        <input type="text" value.bind="bow.amoLength" class="form-control" id="fn" placeholder="">
+        <label for="amoLength">AMO Length</label>
+        <input type="number" value.bind="bow.amoLength" class="form-control" id="amoLength" placeholder="">
       </div>
       <div class="form-group">
-        <label for="fn">Brace Height</label>
-        <input type="text" value.bind="bow.braceHeight" class="form-control" id="fn" placeholder="">
+        <label for="braceHeight">Brace Height</label>
+        <input type="number" value.bind="bow.braceHeight" class="form-control" id="braceHeight" placeholder="">
       </div>
       <button type="submit" class="btn btn-default">Save</button>
     </form>
