--- a/src/round/round.html
+++ b/src/round/round.html
@@ -8,6 +8,12 @@
           <input type="date" message="roundDate.send" value.bind="round.recordedDate" class="form-control" id="recordedDate" placeholder="" required />
         </div>
         <div class="form-group">
+          <label for="type">Round Type</label>
+          <select id="type" class="form-control" value.bind="round.roundType" required>
+            <option repeat.for="type of roundTypes" model.bind="type">${type}</option>
+          </select>
+        </div>
+        <div class="form-group">
           <label for="bow">Bow</label>
           <select id="bow" class="form-control" value.bind="round.bowName" required>
             <option repeat.for="bow of store.scorecard.bows" model.bind="bow.name">${bow.name}</option>
