Working on move with API changes

--- a/src/bow/bow_list.html
+++ b/src/bow/bow_list.html
@@ -16,13 +16,13 @@
         <div class="col-md-1 col-sm-2"><strong>Model</strong></div>
         <div class="col-md-1 col-sm-1"><strong>Poundage</strong></div>
       </div>
-      <div class="row ${ $even ? 'even' :''}" repeat.for="bow of dataLayer.scorecard.bows">
+      <div class="row ${ $even ? 'even' :''}" repeat.for="bow of bows">
         <div class="col-md-2 col-sm-2">
           <button click.delegate="$parent.editBow(bow)"><span class="glyphicon glyphicon-pencil"></span></button>
           <button click.delegate="$parent.deleteBow(bow)"><span class="glyphicon glyphicon-trash"></span></button>
         </div>
         <div class="col-md-3 col-sm-3"><strong class="visible-xs">Name</strong>${bow.name}</div>
-        <div class="col-md-1 col-sm-2"><strong class="visible-xs">Type</strong>${bow.type}</div>
+        <div class="col-md-1 col-sm-2"><strong class="visible-xs">Type</strong>${bow.bow_type_name}</div>
         <div class="col-md-1 col-sm-1"><strong class="visible-xs">Make</strong>${bow.make}</div>
         <div class="col-md-1 col-sm-2"><strong class="visible-xs">Model</strong>${bow.model}</div>
         <div class="col-md-1 col-sm-1"><strong class="visible-xs">Poundage</strong>${bow.poundage}</div>
