--- a/src/bow/bow.html
+++ b/src/bow/bow.html
@@ -8,8 +8,8 @@
       </div>
       <div class="form-group">
         <label for="type">Type</label>
-        <select id="type" value.bind="bow.type" class="form-control">
-          <option repeat.for="btype of bowTypes" value.bind="btype">${btype}</option>
+        <select id="type" value.bind="bow.bow_type" class="form-control">
+          <option repeat.for="btype of bowTypes" value.bind="btype.id">${btype.name}</option>
         </select>
       </div>
       <div class="form-group">
@@ -26,11 +26,11 @@
       </div>
       <div class="form-group">
         <label for="amoLength">AMO Length</label>
-        <input type="number" value.bind="bow.amoLength" class="form-control" id="amoLength" placeholder="">
+        <input type="number" value.bind="bow.amo_length" class="form-control" id="amoLength" placeholder="">
       </div>
       <div class="form-group">
         <label for="braceHeight">Brace Height</label>
-        <input type="number" value.bind="bow.braceHeight" class="form-control" id="braceHeight" placeholder="">
+        <input type="number" value.bind="bow.brace_height" class="form-control" id="braceHeight" placeholder="">
       </div>
       <button type="submit" class="btn btn-default">Save</button>
     </form>
