Updated stats logic

--- a/src/welcome.html
+++ b/src/welcome.html
@@ -23,34 +23,48 @@
           </div>
           <div class="col-md-3">
             <div class="panel panel-default">
-              <div class="panel-heading">30 Day Stats (over ${last30Stats.count} rounds)</div>
+              <div class="panel-heading">30 Day Stats (over ${last30Stats.total_rounds} rounds)</div>
               <div class="panel-body">
                 <dl>
                   <dt>Avg Score</dt>
-                  <dd>${last30Stats.averageRound}</dd>
+                  <dd>${last30Stats.average_round}</dd>
                   <dt>High Score</dt>
-                  <dd>${last30Stats.highRound}</dd>
+                  <dd>${last30Stats.highest_round}</dd>
                   <dt>Low Score</dt>
-                  <dd>${last30Stats.lowRound}</dd>
+                  <dd>${last30Stats.lowest_round}</dd>
+                  <dt>Avg End</dt>
+                  <dd>${last30Stats.average_end}</dd>
+                  <dt>High End</dt>
+                  <dd>${last30Stats.highest_end}</dd>
+                  <dt>Low End</dt>
+                  <dd>${last30Stats.lowest_end}</dd>
+                  <dt>Avg Points p/Arrow</dt>
+                  <dd>${last30Stats.average_point_per_arrow}</dd>
                 </dl>
               </div>
-              <div class="panel-footer">details...</div>
             </div>
           </div>
           <div class="col-md-3">
             <div class="panel panel-default">
-              <div class="panel-heading">Lifetime Stats (over ${lifetimeStats.count} rounds)</div>
+              <div class="panel-heading">Lifetime Stats (over ${lifetimeStats.total_rounds} rounds)</div>
               <div class="panel-body">
                 <dl>
                   <dt>Avg Score</dt>
-                  <dd>${lifetimeStats.averageRound}</dd>
+                  <dd>${lifetimeStats.average_round}</dd>
                   <dt>High Score</dt>
-                  <dd>${lifetimeStats.highRound}</dd>
+                  <dd>${lifetimeStats.highest_round}</dd>
                   <dt>Low Score</dt>
-                  <dd>${lifetimeStats.lowRound}</dd>
+                  <dd>${lifetimeStats.lowest_round}</dd>
+                  <dt>Avg End</dt>
+                  <dd>${lifetimeStats.average_end}</dd>
+                  <dt>High End</dt>
+                  <dd>${lifetimeStats.highest_end}</dd>
+                  <dt>Low End</dt>
+                  <dd>${lifetimeStats.lowest_end}</dd>
+                  <dt>Avg Points p/Arrow</dt>
+                  <dd>${lifetimeStats.average_point_per_arrow}</dd>
                 </dl>
               </div>
-              <div class="panel-footer">details...</div>
             </div>
           </div>
         </div>
