--- a/src/app.html
+++ b/src/app.html
@@ -11,7 +11,7 @@
   <footer class="container-fluid">
     <hr />
     <div class="row">
-      <div class="col-sm-6 col-md-6 text-left"><span show.bind="store.user">Logged In As: ${store.user.email}</span></div>
+      <div class="col-sm-6 col-md-6 text-left"><span show.bind="store.user">Logged In As: ${store.authToken.email}</span></div>
       <div class="col-sm-6 col-md-6 text-right"><span class="hidden-xs">MyShootingLog by <a href="mailto:timothy.dewees@gmail.com">Timothy DeWees</a></span></div>
     </div>
   </footer>
