--- a/src/user/profile.html
+++ b/src/user/profile.html
@@ -1,11 +1,10 @@
 <template>
   <require from="../resources/value-converters/dateFormatValueConverter"></require>
-  <section class="au-animate">
-    <div class="box">
-      <div class="row">
-        <div class="col-md-9">Your MyShootingLog Profile
-        </div>
-      </div>
+  <section class="au-animate container-fluid">
+    <div class="page-header">
+      <h2>${heading}</h2>
+    </div>
+    <div class="container-fluid">
       <div class="row">
         <div class="col-md-3">
           <img src.bind="user.profile_pic" />
